Testing horizontal scroll issue

--- a/june/code/nadieh/css/style.css
+++ b/june/code/nadieh/css/style.css
@@ -15,8 +15,11 @@ html {
 body {
     font-weight: 400;
     font-family: 'Barlow Semi Condensed', sans-serif;
-    margin-top: 0px;
     font-size: 16px;
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    /* width: 1600px; */
 }
 
 .outer-container {
